examples/test/testpolicy3692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3692
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value18
          key7: value36
      podSelector:
        matchLabels:
          key47: value2
          key13: value7
